# xbox-controller

./: CMakeLists.txt  README
doc/packet-traces/: packet-structure.txt
doc/packet-traces/a-button/: depress-1.txt  depress-3.txt  release-1.txt  release-3.txt
doc/packet-traces/b-button/: depress-3.txt
doc/packet-traces/lb-button/: depress-1.txt  release-1.txt
doc/packet-traces/rb-button/: depress-1.txt
doc/packet-traces/x-button/: depress-1.txt  depress-2.txt  depress-3.txt  release-2.txt
doc/packet-traces/y-button/: depress-1.txt  release-1.txt
doc/resources/: hci_tutorials.txt
src/: bluetooth_channel.cpp  bluetooth_channel.h  controller_manager.cpp  controller_manager.h  controller_packet_to_pan_tilt_action_mapper.cpp  controller_packet_to_pan_tilt_action_mapper.h  event_handler.h  event_loop.cpp  event_loop.h  joystick_input_to_servo_action_mapper.cpp  joystick_input_to_servo_action_mapper.h  xbone.cpp
